# Robot2020-QT

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.docx  RobotControlSystem.pro  RobotControlSystem.pro.user.092904c.4.8-pre1  RobotControlSystem.pro.user.21  RobotControlSystem.pro.user.4.9-pre1  RobotControlSystem.pro.user.5506ce5  RobotControlSystem.pro.user.9a567ec.4.9-pre1  RobotControlSystem.pro.user.cb1bc14  armcontrol.cpp  armcontrol.h  armcontrol.ui  armscene.cpp  armscene.h  armsyncworker.cpp  armsyncworker.cpp.autosave  armsyncworker.h  autocontrol.cpp  autocontrol.h  bugs.md  cantypes.h  connectdialog.cpp  connectdialog.h  connectdialog.ui  controlcan.h  controlcanwin.h  controls.cpp  controls.h  controltableview.cpp  controltableview.h  convert.cpp  convert.h  csvImporter.cpp  csvImporter.h  dataserver.cpp  dataserver.h  datatransmission.cpp  datatransmission.h  (+74 more)
LIB/: ControlCAN.lib
libs/cx/: controlcan.h
libs/gc/: ecanvci.h
libs/zlg/: ControlCANZLG.h
qml/: LeftThumbstick.qml  RightThumbstick.qml  main.qml
